--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<style>
 		.intro h1:before {
 			/* Edit this with your name or anything else */
-			content: 'Mehmet KILIÇ';
+			content: 'm.kilic';
 		}
 	</style>
 </head>
@@ -43,7 +43,7 @@
 	<!-- Introduction -->
 	<div class="intro section" id="about">
 		<div class="container">
-			<p>Hi, I’m Draco the Dragon</p>
+			<p>Hi, I’m Mehmet Kılıç</p>
 			<div class="units-row units-split wrap">
 				<div class="unit-20">
 					<img src="img/ava.jpg" alt="Avatar">
