--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Stomp
 			<h1>Work<br>Experiences</h1>
 			<ul class="work-list">
 				<li>2014-2015</li>
-				<li><a href="#">PT Traveloka Indonesia</a></li>
+				<li><a href="#">Turkcell</a></li>
 				<li>Web Designer</li>
 			</ul>
 			<ul class="work-list">
